Fix for heading text alignment on filter pane accordions, an issue introduced by the previous commit

--- a/repository-data/webfiles/src/scss/base/_base.headings.scss
+++ b/repository-data/webfiles/src/scss/base/_base.headings.scss
@@ -82,6 +82,7 @@ h4, .delta {
     line-height: 21px;
     letter-spacing: 0.3px;
     margin: 35px 0 7px 0;
+    top: 0;
   }
 
 
@@ -89,6 +90,7 @@ h4, .delta {
     font-size: $medium-h5-size;
     font-weight: 600;
     margin: 24px 0 16px;
+    top: 0;
   }
 }
 
